reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93215538"
---
# <span data-ttu-id="65dec-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="65dec-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="65dec-104">개요</span><span class="sxs-lookup"><span data-stu-id="65dec-104">SYNOPSIS</span></span>

<span data-ttu-id="65dec-105">지정된 위치에서 다른 위치로 속성 및 값을 복사합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="65dec-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="65dec-106">SYNTAX</span></span>

### <span data-ttu-id="65dec-107">Path (기본값)</span><span class="sxs-lookup"><span data-stu-id="65dec-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="65dec-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="65dec-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="65dec-109">설명</span><span class="sxs-lookup"><span data-stu-id="65dec-109">DESCRIPTION</span></span>

<span data-ttu-id="65dec-110">`Copy-ItemProperty`Cmdlet은 지정 된 위치에서 다른 위치로 속성 및 값을 복사 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="65dec-111">예를 들어이 cmdlet을 사용 하 여 한 레지스트리 키에서 다른 레지스트리 키로 하나 이상의 레지스트리 항목을 복사할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="65dec-112">예제</span><span class="sxs-lookup"><span data-stu-id="65dec-112">EXAMPLES</span></span>

### <span data-ttu-id="65dec-113">예제 1: 레지스트리 키에서 다른 레지스트리 키로 속성 복사</span><span class="sxs-lookup"><span data-stu-id="65dec-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="65dec-114">이 명령은 "MyApplication" 레지스트리 키에서 "T.myproperty" 라는 속성을 "MyApplicationRev2" 레지스트리 키에 복사 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="65dec-115">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="65dec-115">PARAMETERS</span></span>

### <span data-ttu-id="65dec-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="65dec-116">-Credential</span></span>

<span data-ttu-id="65dec-117">이 작업을 수행할 권한이 있는 사용자 계정을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="65dec-118">기본값은 현재 사용자입니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-118">The default is the current user.</span></span>

<span data-ttu-id="65dec-119">"User01" 또는 "Domain01\User01"과 같은 사용자 이름을 입력 하거나, cmdlet에 의해 생성 된 것과 같은 **PSCredential** 개체를 입력 합니다 `Get-Credential` .</span><span class="sxs-lookup"><span data-stu-id="65dec-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="65dec-120">사용자 이름을 입력 하면 암호를 입력 하 라는 메시지가 표시 됩니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="65dec-121">이 매개 변수는 Windows PowerShell과 함께 설치된 모든 공급자에서 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-122">-Destination</span><span class="sxs-lookup"><span data-stu-id="65dec-122">-Destination</span></span>

<span data-ttu-id="65dec-123">대상 위치의 경로를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-124">-제외</span><span class="sxs-lookup"><span data-stu-id="65dec-124">-Exclude</span></span>

<span data-ttu-id="65dec-125">이 cmdlet이 제외 하는 항목을 문자열 배열로 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="65dec-126">이 매개 변수 값은 **Path** 매개 변수를 한정합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="65dec-127">경로 요소 또는 패턴(예: "\*.txt")을 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="65dec-128">와일드카드 문자를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="65dec-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="65dec-129">-Filter</span></span>

<span data-ttu-id="65dec-130">공급자의 형식 또는 언어로 필터를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="65dec-131">이 매개 변수 값은 **Path** 매개 변수를 한정합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="65dec-132">와일드 카드 문자를 포함 한 필터 구문은 공급자에 따라 달라 집니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="65dec-133">필터는 다른 매개 변수 보다 더 효율적입니다. cmdlet이 개체가 검색 된 후 개체를 필터링 하는 대신 개체를 가져올 때 해당 개체를 적용 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="65dec-134">-Force</span><span class="sxs-lookup"><span data-stu-id="65dec-134">-Force</span></span>

<span data-ttu-id="65dec-135">사용자 확인을 요청하지 않고 명령을 강제 실행합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="65dec-136">구현은 공급자에 따라 다릅니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="65dec-137">자세한 내용은 [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md)를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="65dec-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-138">-포함</span><span class="sxs-lookup"><span data-stu-id="65dec-138">-Include</span></span>

<span data-ttu-id="65dec-139">이 cmdlet이 작업에 포함 하는 항목 또는 항목을 문자열 배열로 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="65dec-140">이 매개 변수 값은 **Path** 매개 변수를 한정합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="65dec-141">경로 요소 또는 패턴(예: "\*.txt")을 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="65dec-142">와일드카드 문자를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="65dec-143">-LiteralPath</span></span>

<span data-ttu-id="65dec-144">속성의 현재 위치에 대한 경로를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="65dec-145">**Path** 매개 변수와 달리 **LiteralPath** 값은 입력한 대로 사용됩니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="65dec-146">어떠한 문자도 와일드카드로 해석되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="65dec-147">이스케이프 문자가 포함된 경로는 작은따옴표로 묶으세요.</span><span class="sxs-lookup"><span data-stu-id="65dec-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="65dec-148">작은따옴표는 모든 문자를 이스케이프 시퀀스로 해석 하지 않도록 PowerShell에 지시 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-149">-Name</span><span class="sxs-lookup"><span data-stu-id="65dec-149">-Name</span></span>

<span data-ttu-id="65dec-150">복사할 속성의 이름을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-151">-PassThru</span><span class="sxs-lookup"><span data-stu-id="65dec-151">-PassThru</span></span>

<span data-ttu-id="65dec-152">작업 중인 항목을 나타내는 개체를 반환합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="65dec-153">기본적으로 이 cmdlet은 출력을 생성하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-154">-Path</span><span class="sxs-lookup"><span data-stu-id="65dec-154">-Path</span></span>

<span data-ttu-id="65dec-155">복사할 속성의 경로를 문자열 배열로 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-156">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="65dec-156">-UseTransaction</span></span>
<span data-ttu-id="65dec-157">활성 트랜잭션에 명령을 포함합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="65dec-158">이 매개 변수는 트랜잭션이 진행 중인 경우에만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="65dec-159">자세한 내용은 about_Transactions를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="65dec-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="65dec-160">-Confirm</span></span>
<span data-ttu-id="65dec-161">cmdlet을 실행하기 전에 확인을 요청합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="65dec-162">-WhatIf</span></span>

<span data-ttu-id="65dec-163">cmdlet을 실행할 경우 발생하는 일을 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="65dec-164">cmdlet은 실행되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="65dec-165">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="65dec-165">CommonParameters</span></span>

<span data-ttu-id="65dec-166">이 cmdlet은,,,,,,,,, `-Debug` `-ErrorAction` `-ErrorVariable` `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` `-PipelineVariable` `-Verbose` `-WarningAction` 및 `-WarningVariable` 등의 일반 매개 변수를 지원 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="65dec-167">자세한 내용은 [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md)를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="65dec-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="65dec-168">입력</span><span class="sxs-lookup"><span data-stu-id="65dec-168">INPUTS</span></span>

### <span data-ttu-id="65dec-169">System.String</span><span class="sxs-lookup"><span data-stu-id="65dec-169">System.String</span></span>

<span data-ttu-id="65dec-170">이 cmdlet에 대 한 경로가 포함 된 문자열을 파이프 할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="65dec-171">출력</span><span class="sxs-lookup"><span data-stu-id="65dec-171">OUTPUTS</span></span>

### <span data-ttu-id="65dec-172">없음 또는 PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="65dec-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="65dec-173">**Passthru** 매개 변수를 사용 하는 경우이 cmdlet은 복사 된 항목 속성을 나타내는 **PsCustomObject** 를 생성 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="65dec-174">그러지 않으면 이 cmdlet에서 출력이 생성되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="65dec-175">참고</span><span class="sxs-lookup"><span data-stu-id="65dec-175">NOTES</span></span>

<span data-ttu-id="65dec-176">이 cmdlet은 모든 공급자가 제공 하는 데이터에 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="65dec-177">세션에서 사용할 수 있는 공급자를 나열 하려면을 입력 `Get-PSProvider` 합니다.</span><span class="sxs-lookup"><span data-stu-id="65dec-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="65dec-178">자세한 내용은 About_Providers를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="65dec-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="65dec-179">관련 링크</span><span class="sxs-lookup"><span data-stu-id="65dec-179">RELATED LINKS</span></span>

[<span data-ttu-id="65dec-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="65dec-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="65dec-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="65dec-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="65dec-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="65dec-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="65dec-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="65dec-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="65dec-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="65dec-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="65dec-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="65dec-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="65dec-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="65dec-186">Get-PSProvider</span></span>](Get-PSProvider.md)
